frontend/src/styles/test.scss
/* ... */
#mobileTestConfigButton {
  display: none;
  justify-self: center;
  margin-bottom: 1rem;
  height: max-content;
  button {
    font-size: 0.75rem;
    padding: 1em 2em;
    color: var(--sub-color);
    &:hover {
      color: var(--bg-color);
    }
  }
}

#testConfig {
  --horizontalPadding: 1em;
  --verticalPadding: 1em;
  display: grid;
  font-size: 0.75rem;
  gap: 0.5em;
  grid-auto-flow: column;
  height: max-content;
  width: 100%;
  transition: opacity 0.125s;
  justify-content: space-around;
  margin-bottom: 1rem;
  .puncAndNum {
    // transition: 0.25s cubic-bezier(0.37, 0, 0.63, 1);
    // overflow: hidden;
    opacity: 1;
  }
  .row {
    display: flex;
    // padding: 0 0.5rem;
    background: var(--sub-alt-color);
    border-radius: var(--roundness);
    // width: max-content;
  }
  .spacer {
    height: auto;
    width: 0.5em;
    border-radius: calc(var(--roundness) / 2);
    background: var(--bg-color);
    margin: 0.75em 0;
    transition: 250ms;
    &.scrolled {
      opacity: 0;
      width: 0;
    }
  }

  .wordCount,
  .time,
  .customText {
    .textButton {
      // line-height: 1.4em;
      span {
        // height: 1.1em;
        margin-top: 0.12em;
      }
    }
  }

  .mode,
  .time,
  .wordCount,
  .puncAndNum,
  .quoteLength,
  .customText,
  .zen {
    display: grid;
    grid-auto-flow: column;

    .textButton {
      padding: var(--verticalPadding) var(--horizontalPadding);

      &:first-child {
        margin-left: var(--horizontalPadding);
      }
      &:last-child {
        margin-right: var(--horizontalPadding);
      }
      &:only-child {
        margin-inline: var(--horizontalPadding);
      }
    }
  }
  .time,
  .wordCount,
  .customText,
  .zen,
  .quoteLength {
    justify-content: end;
  }
  .puncAndNum {
    justify-content: start;
  }
  .customText {
    display: grid;
  }
}

.pageTest {
  height: 100%;
  display: grid;
  grid-template-rows: 1fr auto 1fr;
}

.pageTest {
  #wordsWrapper {
    position: relative;
    &.tape {
      -webkit-mask-image: linear-gradient(
        90deg,
        rgba(0, 0, 0, 0) 1%,
        rgb(0, 0, 0) 10%,
        rgb(0, 0, 0) 90%,
        rgba(0, 0, 0, 0) 99%
      );
      mask-image: linear-gradient(
        90deg,
        rgba(0, 0, 0, 0) 1%,
        rgb(0, 0, 0) 10%,
        rgb(0, 0, 0) 90%,
        rgba(0, 0, 0, 0) 99%
      );
    }
  }
  #memoryTimer,
  #layoutfluidTimer {
    font-size: 1rem;
    background: var(--main-color);
    color: var(--bg-color);
    padding: 1rem;
    border-radius: var(--roundness);
    /* width: min-content; */
    text-align: center;
    width: max-content;
    /* justify-self: center; */
    left: 50%;
    position: absolute;
    transform: translateX(-50%);
    top: -6rem;
    -webkit-user-select: none;
    user-select: none;
    pointer-events: none;
    opacity: 0;
  }
  .outOfFocusWarning {
    text-align: center;
    height: 0;
    font-size: 1rem;
    z-index: 999;
    position: absolute;
    width: 100%;
    -webkit-user-select: none;
    user-select: none;
    pointer-events: none;
  }

  #testModesNotice {
    font-size: 1rem;
    display: flex;
    flex-wrap: wrap;
    color: var(--sub-color);
    text-align: center;
    margin-bottom: 0.5rem;
    transition: opacity 0.125s;
    justify-content: center;
    -webkit-user-select: none;
    user-select: none;

    .textButton {
      padding: 0.5em 1em;
      &.noInteraction {
        pointer-events: none;
      }
    }

    .fas {
      margin-right: 0.5rem;
    }
  }
  #liveStatsMini {
    height: 0;
    margin-left: 0.25em;
    display: flex;
    margin-top: -1.25em;
    color: black;

    div {
      font-size: 1em;
      line-height: 1em;
    }

    .time,
    .speed,
    .acc {
      margin-right: 0.5em;
    }

    .time,
    .speed,
    .acc,
    .burst {
      opacity: 0;
    }

    &.timerMain {
      color: var(--main-color);
    }

    &.timerSub {
      color: var(--sub-color);
    }

    &.timerText {
      color: var(--text-color);
    }

    &.size125 {
      margin-top: -1.75rem;
      font-size: 1.25rem;
      line-height: 1.25rem;
    }
    &.size15 {
      margin-top: -2rem;
      font-size: 1.5rem;
      line-height: 1.5rem;
    }
    &.size2 {
      margin-top: -2.5rem;
      font-size: 2rem;
      line-height: 2rem;
    }
    &.size3 {
      margin-top: -3.5rem;
      font-size: 3rem;
      line-height: 3rem;
    }
    &.size4 {
      margin-top: -4.5rem;
      font-size: 4rem;
      line-height: 4rem;
    }
  }
}

main.focus .pageTest {
  #testModesNotice {
    opacity: 0 !important;
  }
  #testConfig {
    opacity: 0 !important;
  }
  #mobileTestConfigButton {
    opacity: 0 !important;
  }
}

/* funbox nospace */
body.fb-nospace {
  #words .word {
    margin: 0.5em 0;
  }
}

/* funbox arrows */
body.fb-arrows {
  #words .word {
    margin: 0.5em 0;
    letter {
      margin: 0 0.25em;
    }
  }
}

